# hyprpdf

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  OUTLINE.md  README.md
docs/superpowers/plans/: 2026-04-19-icons-and-skeleton.md  2026-04-21-v0.2-navigation.md  2026-04-22-v0.3-annotations.md
docs/superpowers/specs/: 2026-04-19-icons-and-skeleton-design.md  2026-04-21-v0.2-navigation-design.md  2026-04-22-v0.3-annotations-design.md
src/: CMakeLists.txt  main.cpp
src/models/: documentmodel.cpp  documentmodel.h  outlinemodel.cpp  outlinemodel.h  recentfilesmodel.cpp  recentfilesmodel.h
src/qml/: AnnotContextPopup.qml  AnnotLayer.qml  AnnotToolbar.qml  Main.qml  OutlinePanel.qml  PdfView.qml  RecentFilesView.qml  SearchBar.qml  SelectionPopup.qml  StickyEditor.qml  TabsBar.qml  Theme.qml  ThumbnailList.qml  Toolbar.qml
src/qml/shaders/: highlight_under_text.frag  invert.frag
src/services/: annotationstore.cpp  annotationstore.h  clipboardbridge.cpp  clipboardbridge.h  configmanager.cpp  configmanager.h  documentcontroller.cpp  documentcontroller.h  documenthasher.cpp  documenthasher.h  pdfdoc.cpp  pdfdoc.h  pdfpageimageprovider.cpp  pdfpageimageprovider.h  searchcontroller.cpp  searchcontroller.h  themeloader.cpp  themeloader.h
tests/: CMakeLists.txt  tst_annotationstore.cpp  tst_clipboardbridge.cpp  tst_configmanager.cpp  tst_documentcontroller.cpp  tst_documenthasher.cpp  tst_documentmodel.cpp  tst_outlinemodel.cpp  tst_pdfdoc.cpp  tst_recentfilesmodel.cpp  tst_searchcontroller.cpp  tst_themeloader.cpp
themes/: default.toml  latte.toml
